samples/_failures_safe/1761312259_c4fa7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3e48919.c: In function ‘main’:
./samples/SAFE/__tmp_c3e48919.c:146:9: error: expected declaration or statement at end of input
  146 |         printf("Enter event number (or -1 to exit): ");
      |         ^~~~~~
./samples/SAFE/__tmp_c3e48919.c:146:9: error: expected declaration or statement at end of input
